# tape-recorder

./: .directory  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/migafgarcia/taperecorder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: RecordingEngine.cpp  RecordingEngine.h  native-lib.cpp
app/src/main/java/com/migafgarcia/taperecorder/: AppComponent.java  AppDatabase.java  AppScope.java  AudioEngine.kt  ContextModule.java  DatabaseModule.java  RecorderActivity.java  RecorderModule.java  RecorderService.java  RecorderStatus.java  Recording.java  RecordingsAdapter.java  RecordingsPlayer.java  RecordingsRepository.java  TapeRecorderApp.java  Utils.java
app/src/main/java/com/migafgarcia/taperecorder/database/: AppDatabase.java  RecordingDao.java
app/src/main/java/com/migafgarcia/taperecorder/debug/: DebugActivity.kt
app/src/main/java/com/migafgarcia/taperecorder/models/: Recording.java  RecordingDao.java
app/src/main/java/com/migafgarcia/taperecorder/recorder/: RecorderIntentService.java
app/src/main/java/com/migafgarcia/taperecorder/recordings/: RecorderActivity.java  RecorderService.java  RecorderStatus.java  RecordingsAdapter.java
app/src/main/res/layout/: activity_debug.xml  activity_recorder.xml  recording_item.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/test/java/com/migafgarcia/taperecorder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
server/: build.gradle
(+3 files in other folders)
